@@ -1,4 +1,6 @@
 NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
+10062013 -> jonnyboy -> reverted my previous patch
+                        removed check for dupe before release creation
 10052103 -> jonnyboy -> added my rename script, would be better that these reges were part of namefixer/namecleaner
 10032013 -> ThePeePs -> Added Script to update article numbers for groups when changing USP's rather than resetting all groups.
 10032013 -> jonnyboy -> changed update/insert queries with last_record and first_record from dec to string
